<resources>
    <string name="app_name">HangMan</string>
    <string name="buttonPlay">PLAY</string>
    <string name="buttonScore">SHOW SCORE</string>
    <string name="userName">Write your username:</string>
    <string name="setUserName">Set your username</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonPlus">+</string>
    <string name="buttonPrevious">WRÓĆ</string>
    <string name="lost">You lost!</string>
    <string name="won">You won!</string>
    <string name="newGame">Start new game</string>
    <string name="a">A</string>
    <string name="ą">Ą</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="ć">Ć</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="ę">Ę</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="ł">Ł</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="ó">Ó</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="ś">Ś</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="w">W</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="ź">Ź</string>
    <string name="ż">Ż</string>
</resources>