<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameLayout"
    android:background="@color/purple_700">

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:text="@string/buttonPrevious"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/game10"
        app:layout_constraintTop_toBottomOf="@id/buttonPrevious"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/lostGameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lost"
        android:textColor="#ff0000"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="243dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/imgView"
        app:layout_constraintEnd_toEndOf="@id/imgView"
        app:layout_constraintStart_toStartOf="@id/imgView"
        app:layout_constraintTop_toTopOf="@id/imgView"
        />

    <TextView
        android:id="@+id/wonGameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/won"
        android:textColor="#00ff00"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="243dp"
        android:visibility="gone"
        tools:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imgView"
        app:layout_constraintEnd_toEndOf="@id/imgView"
        app:layout_constraintStart_toStartOf="@id/imgView"
        app:layout_constraintTop_toTopOf="@id/imgView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:id="@+id/wordView"
        android:textColor="@color/white"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        tools:text="_ _ A B C D _ _ "
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:textColor="@color/white"
        android:id="@+id/usedLetterView"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/wordView"
        tools:text="Used letters: A, B, C, D, E"
    />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="32dp"
        android:padding="15dp"
        android:text="@string/newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lettersToUse"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersToUse"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        app:layout_constraintTop_toBottomOf="@id/usedLetterView">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:constraint_referenced_ids="a, ą, b, c, ć, d, e, ę, f, g, h, i, j, k, l, ł, m, n, o, ó, p, r, s, ś, t, u, w, y, z, ź, ż"
            app:flow_wrapMode="chain"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/a"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ą"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ą"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/b"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ć"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ć"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/d"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/e"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ę"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ę"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/f"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/g"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/h"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/i"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/j"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/k"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/l"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ł"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ł"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/n"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/o"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ó"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ó"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/p"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/r"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/s"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ś"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ś"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/t"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/u"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>


        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/w"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/y"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/z"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ź"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ź"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/ż"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/ż"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>